<resources>
    <string name="app_name">Computer Builder</string>
    <string name="main_text">Welcome to Computer Builder\nWe are here to help you build your dream
        computer!\nPlease select from one of the following options:</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings for items related to the side menu-->
    <string-array name="drawer_items">
        <item>My Profile</item>
        <item>New Build</item>
        <item>Saved Builds</item>
        <item>My Cart</item>
        <item>Settings</item>
        <item>Help</item>
        <item>Log Out</item>
    </string-array>
    <string name="profile">My Profile</string>
    <string name="new_build">New Build</string>
    <string name="saved_builds">Saved Builds</string>
    <string name="individual_Parts">Buy Individual Parts</string>
    <string name="cart">My Cart</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="log_out">Log Out</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Strings related to Parts Filter-->
    <string-array name="brand">
        <item>Intel</item>
        <item>AMD</item>
    </string-array>
    <string-array name="sort">
        <item>Price: Highest to Lowest</item>
        <item>Price: Lowest to Highest</item>
        <item>Brand</item>
    </string-array>
    <string-array name="retailer">
        <item>Newegg</item>
        <item>Amazon</item>
        <item>Tiger Direct</item>
    </string-array>
    <!--Strings related to build info Screen-->
    <string name="build_info">We apreciate your purchase through Computer Builder! We hope that this application has guided you through the steps of purchasing the parts to build your own computer. Yet, this was the easy part!Please watch our instructional video below on how to fully assemble your custom computer:</string>
    <string name="build_info_tips">TIPS: Do not build on carpet</string>

    >>>>>>> master
</resources>
